--- a/dev/main.css
+++ b/dev/main.css
@@ -272,7 +272,7 @@ html, body {
   /* Reset `padding` and `margin` of all elements */
   padding: 0;
   margin: 0;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 a, button, input {
   -webkit-tap-highlight-color: transparent;
