--- a/dev/main.css
+++ b/dev/main.css
@@ -229,8 +229,6 @@ html {
   height: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  /* All browsers without overlaying scrollbars */
-  overflow-y: scroll;
 }
 body {
   font-size: 14px;
@@ -240,7 +238,7 @@ body {
   min-height: 100%;
   margin: 0;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   font-style: normal;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
