--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -8,8 +8,6 @@ html {
   -webkit-text-size-adjust: 100%; /* iOS 8+ */
   height: 100%;
   box-sizing: border-box;
-  /* All browsers without overlaying scrollbars */
-  overflow-y: scroll;
 }
 
 body {
@@ -18,7 +16,7 @@ body {
   min-height: 100%;
   margin: 0;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   font-style: normal;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
