--- a/src/styles/components/pages/_index.scss
+++ b/src/styles/components/pages/_index.scss
@@ -1,5 +1,5 @@
 @import "../../settings/index";
 @import "../../tools/index";
 
-@include block('game-ui', 'component') {
+@include block('index-page', 'component') {
 }
