--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -78,6 +78,7 @@ $grid-gutters: (
 
 /** Typography */
 $font-family-default: 'Yanone Kaffeesatz', Arial, sans-serif;
+$font-family-ui: 'Comfortaa', Arial, sans-serif;
 
 $font-size-caption: 12px;
 $font-size-body: 14px;
