--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -18,7 +18,7 @@ html {
 
 body {
   @include font-body;
-  font-family: $font-family-default !important;
+  font-family: $font-family-ui !important;
   min-height: 100%;
   margin: 0;
   overflow-x: hidden;
