--- a/src/styles/components/_start-menu.scss
+++ b/src/styles/components/_start-menu.scss
@@ -116,4 +116,11 @@
       margin-bottom: $indent-small;
     }
   }
+
+  @include element('account') {
+    text-align: center;
+    padding: $indent-medium 0;
+
+    @include font-heading;
+  }
 }
