--- a/src/styles/components/_social-auth.scss
+++ b/src/styles/components/_social-auth.scss
@@ -9,5 +9,7 @@
     @extend %layer-flex-row;
     align-items: center;
     justify-content: center;
+    background-color: white;
+    z-index: 1;
   }
 }
