--- a/src/styles/components/_network-connection.scss
+++ b/src/styles/components/_network-connection.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   right: 0;
   z-index: 200;
+  font-family: $font-family-default;
 
   @include element('inner') {
     transform: translate3d(-$indent-medium, -$indent-medium, 0);
